# NISO

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/niso_backend/: Cargo.toml
crates/niso_backend/src/: execution.rs  lib.rs  simulator.rs
crates/niso_bench/: Cargo.toml
crates/niso_bench/examples/: simulation_benchmark.rs
crates/niso_bench/src/: generators.rs  lib.rs  reporter.rs  suite.rs
crates/niso_calibration/: Cargo.toml
crates/niso_calibration/src/: calibration_cache.rs  calibration_info.rs  lib.rs
crates/niso_core/: Cargo.toml
crates/niso_core/src/: builder.rs  circuit.rs  constants.rs  error.rs  gate.rs  lib.rs  topology.rs  types.rs
crates/niso_engine/: Cargo.toml
crates/niso_engine/src/: config.rs  lib.rs  optimizer.rs  pipeline.rs
crates/niso_noise/: Cargo.toml
crates/niso_noise/src/: gate_times.rs  lib.rs  noise_model.rs  noise_vector.rs
crates/niso_python/: Cargo.toml  README.md  pyproject.toml
crates/niso_python/python/niso/: __init__.pyi
crates/niso_python/src/: bench.rs  config.rs  lib.rs  optimizer.rs  result.rs
crates/niso_qiskit/: Cargo.toml  README.md
crates/niso_qiskit/examples/: ibm_execution_robust.rs  tqqc_optimization.rs
crates/niso_qiskit/src/: auth.rs  backend.rs  client.rs  job.rs  lib.rs  transpiler.rs
crates/niso_schedule/: Cargo.toml
crates/niso_schedule/src/: circuit_schedule.rs  lib.rs  scheduled_gate.rs  scheduler.rs
crates/niso_tqqc/: Cargo.toml
crates/niso_tqqc/src/: config.rs  convergence.rs  engine.rs  lib.rs  parity.rs  stat_test.rs
docs/: NISO_Unified_Specification_v1.1.md
