[package]
name = "niso_bench"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NISO Bench - Benchmarking suite for quantum optimization"

[dependencies]
niso_core = { path = "../niso_core" }
niso_noise = { path = "../niso_noise" }
niso_backend = { path = "../niso_backend" }
niso_tqqc = { path = "../niso_tqqc" }
niso_engine = { path = "../niso_engine" }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true
rand = "0.8"

[dev-dependencies]
approx.workspace = true

[[example]]
name = "simulation_benchmark"
path = "examples/simulation_benchmark.rs"
