[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "niso"
version = "0.1.0"
description = "NISO - NISQ Integrated System Optimizer"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Jung Wook Yang", email = "sadpig70@gmail.com" }
]
keywords = [
    "quantum",
    "quantum-computing",
    "nisq",
    "optimization",
    "tqqc",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Physics",
    "Operating System :: OS Independent",
]
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "numpy>=1.20",
    "matplotlib>=3.5",
]

[project.urls]
Homepage = "https://github.com/sadpig70/niso"
Documentation = "https://github.com/sadpig70/niso"
Repository = "https://github.com/sadpig70/niso"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "niso"
python-source = "python"
