[package]
name = "niso_qiskit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "IBM Quantum hardware integration for NISO"

[dependencies]
# NISO crates
niso_core = { path = "../niso_core" }
niso_backend = { path = "../niso_backend" }
niso_calibration = { path = "../niso_calibration" }
niso_tqqc = { path = "../niso_tqqc" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Utilities
url = "2.5"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
log = "0.4"

[dev-dependencies]
approx.workspace = true
tokio-test = "0.4"

[[example]]
name = "tqqc_optimization"
path = "examples/tqqc_optimization.rs"
