[package]
name = "niso_schedule"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "NISO Schedule - Circuit scheduling and timing analysis"

[dependencies]
niso_core = { path = "../niso_core" }
niso_noise = { path = "../niso_noise" }
thiserror.workspace = true
serde = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
approx.workspace = true
